# karukan

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: karukan-macos-ci.yml
karukan-engine/src/: kana.rs  lib.rs
karukan-engine/src/kanji/: hf_download.rs
karukan-fcitx5/fcitx5-addon/src/: karukan.cpp
karukan-fcitx5/include/: karukan.h
karukan-fcitx5/src/ffi/: mod.rs  query.rs  tests.rs
karukan-im/: Cargo.toml  README.md
karukan-im/config/: default.toml
karukan-im/src/: lib.rs
karukan-im/src/config/: settings.rs
karukan-im/src/core/: keycode.rs  state.rs
karukan-im/src/core/engine/: conversion.rs  fkeys.rs  init.rs  input.rs  mod.rs  types.rs
karukan-im/src/core/engine/tests/: alphabet.rs  basic.rs  conversion_range.rs  fkeys.rs  live_conversion.rs  mod.rs
karukan-im/src/ffi/: input.rs  lifecycle.rs  mod.rs
karukan-im/src/server/: mod.rs  protocol.rs  tests.rs
karukan-macos/: .swift-format  Info.plist  Makefile  Package.swift  README.md
karukan-macos/Sources/KarukanIME/: CandidatePanelPlacement.swift  CandidateWindowController.swift  EngineClient.swift  EngineProcess.swift  EngineProtocol.swift  KarukanInputController.swift  KeyCodeMap.swift  main.swift
karukan-macos/Tests/KarukanIMETests/: CandidatePanelPlacementTests.swift  EngineProtocolTests.swift  KeyCodeMapTests.swift  TransportTests.swift
karukan-macos/resources/: karukan-roman.tiff  karukan.icns  karukan.tiff
karukan-macos/resources/en.lproj/: InfoPlist.strings
karukan-macos/resources/ja.lproj/: InfoPlist.strings
karukan-macos/scripts/: generate_icons.swift
